--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Max Опросы</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+    <nav class="nav">
+        <div class="container">
+            <div class="nav__row">
+                <a href="#" class="logo">MAX</a>
+                <div class="navigation">
+                    <a href="#" class="authorization">Авторизоваться</a>
+                    <ul class="navigation-list">
+                        <li><a href="#">Зарегистрироваться</a></li>
+                        <li><a href="#">Создать</a></li>
+                        <li><a href="#">Ответы</a></li>
+                        <li><a href="#">КД</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
+    <div class="header-home">
+        <div class="container">
+            <div class="header-home__row">
+                <div class="header-home__main-content">
+                    <h1 class="header-home__title">
+                        Для нас <span>важно</span> ваше мнение
+                    </h1>
+                    <p class="header-home__subtitle">
+                        Поэтому мы создаём опросы!
+                    </p>
+                    <a href="#" class="header-home__btn">
+                        Создать опрос
+                    </a>
+                </div>
+                <div class="header-home__img">
+                    <img src="assets/img/home_content/home_content.png" alt="drafts">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
