--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         Поэтому мы создаём опросы!
                     </p>
                     <a href="#" class="header-home__btn">
-                        Создать опросccc
+                        Создать опрос
                     </a>
                 </div>
                 <div class="header-home__img">
