update(authorization-page)

--- a/autorization.html
+++ b/autorization.html
@@ -26,7 +26,7 @@
                       <input class="reg__input" id="password" type="password" name="password" placeholder="Придумайте пароль">
                     </label>
                   </div>
-                <input type="submit" class="reg__submit" value="">
+                <input type="submit" class="reg__submit" value="">s
               </div>
             </form>
           </div>
