update(authorization-page-1.1)

--- a/autorization.html
+++ b/autorization.html
@@ -16,6 +16,7 @@
           </nav>
           <div class="authorization-block">
             <h1 class="reg__title">Регистрация</h1>
+              
             <form method="post" action="">
               <div class="form__reg">
                   <div class="input-group">
@@ -26,10 +27,19 @@
                       <input class="reg__input" id="password" type="password" name="password" placeholder="Придумайте пароль">
                     </label>
                   </div>
-                <input type="submit" class="reg__submit" value="">s
+                  <label class="submit__label" for="sumbit">
+                    <input id="sumbit" type="submit" class="reg__submit" value="" >
+                  </label>
+                  <p class="account-authorization">
+                      У вас уже есть аккаунт? <a href="#">Войдите</a>
+                  </p>
               </div>
             </form>
+              
           </div>
+            <div class="authorization-img">
+                <img src="assets/img/reg_icons/door.png" alt="">
+            </div>
         </div>
     </div>
 </body>
