--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="navigation">
                     <a href="#" class="authorization">Авторизоваться</a>
                     <ul class="navigation-list">
-                        <li><a href="autorization.php">Зарегистрироваться</a></li>
+                        <li><a href="registration.php">Зарегистрироваться</a></li>
                         <li><a href="#">Создать</a></li>
                         <li><a href="#">Ответы</a></li>
                         <li><a href="#">КД</a></li>
