--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="nav__row">
                 <a href="#" class="logo">MAX</a>
                 <div class="navigation">
-                    <a href="#" class="authorization">Авторизоваться</a>
+                    <a href="authorization.html" class="authorization">Авторизоваться</a>
                     <ul class="navigation-list">
                         <li><a href="registration.php">Зарегистрироваться</a></li>
                         <li><a href="#">Создать</a></li>
