--- a/authorization.html
+++ b/authorization.html
@@ -21,7 +21,7 @@
         <div class="form__reg">
           <div class="input-group">
             <label for="email">
-              <input class="reg__input" id="email" type="email" name="email" placeholder="Введите почту">
+              <input class="reg__input" id="email" type="text" name="email" placeholder="Введите почту">
             </label>
             <label for="password">
               <input class="reg__input" id="password" type="password" name="password" placeholder="Введите пароль">
