--- a/authorization.html
+++ b/authorization.html
@@ -20,10 +20,10 @@
       <form id="authorization" method="post" action="">
         <div class="form__reg">
           <div class="input-group">
-            <label for="email">
+            <label class="email__label" for="email">
               <input class="reg__input" id="email" type="text" name="email" placeholder="Введите почту">
             </label>
-            <label for="password">
+            <label class="password__label" for="password">
               <input class="reg__input" id="password" type="password" name="password" placeholder="Введите пароль">
             </label>
           </div>
